--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <title>ReactJS: Tic Tac Toe</title>
         
         <meta name="description" content="Tic Tac Toe with ReactJS">
+        <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
 
         <!-- Place favicon.ico in the root directory -->
@@ -16,6 +17,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
+        <div id="masthead">Tic-Tac-Toe</div>
         <section id="game-view"></section>
         <script src="../build/bundle.js"></script>
     </body>
